Implementation finished
Moved cal authentication to new tab and redirects to first created google calendar event after. To bypass blocked popups, the redirect is opened in the same window as calendar authorization.
